--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
 <body>
 <div class="container">
     <div class="sidebar">
-        <div style="background: linear-gradient(220.16deg, #ffe101 -8%, #f39102 138%);">
-            <h1>Automated Customer Service</h1>
-            <p>Love, death & robots</p>
-        </div>
         <div style="background: linear-gradient(229.99deg, #11dee9 -26%, #017e8b 145%);">
             <h1>Snow in the desert</h1>
             <p>Love, death & robots</p>
@@ -27,7 +23,10 @@
             <h1>Zima Blue</h1>
             <p>Love, death & robots</p>
         </div>
-
+        <div style="background: linear-gradient(220.16deg, #ffe101 -8%, #f39102 138%);">
+            <h1>Automated Customer Service</h1>
+            <p>Love, death & robots</p>
+        </div>
     </div>
     <div class="main-slide">
         <div style="background-image: url('https://images.unsplash.com/photo-1601574968106-b312ac309953?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1996&q=80');"></div>
@@ -44,5 +43,6 @@
         </button>
     </div>
 </div>
+<script src="script.js"></script>
 </body>
 </html>
